--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
  </head>
  <body>
  <!----- header----->
- <header>ヘッダー</header>
- <nav>ナビ</nav>
+ <header></header>
+ <nav></nav>
  <!----- /header ----->
  
  <!----- main ----->
  <article>
  <h1>記事</h1>
  <section>
- <h2>見出し２</h2>
- <p>コンテンツの内容</p>
- <a href="記事1.html">htmlkiji</a>
- <a href="Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！.md">mdkiji</a>
+ <h2></h2>
+ <a href="記事1.html">Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！/a>
+ <a href="記事2.html">Pythonで機械学習して知らないキノコを毒死せずに食べる</a>
  </section>
  </article>
  <!----- /main ----->
