--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
  <h1>記事</h1>
  <section>
  <h2></h2>
- <a href="記事1.html">Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！/a>
+ <a href="記事1.html">Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！</a><br>
  <a href="記事2.html">Pythonで機械学習して知らないキノコを毒死せずに食べる</a>
  </section>
  </article>
  <!----- /main ----->
  
  <!----- footer ----->
- <footer>フッター</footer>
+ <footer></footer>
  <!----- /footer ----->
  </body>
 </html>
