--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 </head>
 
 <body>
-    <div id="doc" class="markdown-body container-fluid comment-enabled" data-hard-breaks="true"><h1 id="Pythondl班から2021年理大祭へ" data-id="Pythondl班から2021年理大祭へ"><a class="anchor hidden-xs" href="#Pythondl班から2021年理大祭へ" title="Pythondl班から2021年理大祭へ"><span class="octicon octicon-link"></span></a><span>Python/dl班から2021年理大祭へ</span></h1><h6 id="tags-OSK" data-id="tags-OSK"><a class="anchor hidden-xs" href="#tags-OSK" title="tags-OSK"><span class="octicon octicon-link"></span></a><span>tags: </span><code>OSK</code></h6><h2 id="概要" data-id="概要"><a class="anchor hidden-xs" href="#概要" title="概要"><span class="octicon octicon-link"></span></a><span>概要</span></h2><p><span>Python班(2021)/DeepLearning班(2021) 班長が、今年度ゼミの課題で作った成果物。</span><br>
+    <div id="doc" class="markdown-body container-fluid comment-enabled" data-hard-breaks="true"><h1 id="Pythondl班から2021年理大祭へ" data-id="Pythondl班から2021年理大祭へ"><a class="anchor hidden-xs" href="#Pythondl班から2021年理大祭へ" title="Pythondl班から2021年理大祭へ"><span class="octicon octicon-link"></span></a><span>Python/dl班から2021年理大祭へ</span></h1><h6 id="tags-OSK" data-id="tags-OSK"><a class="anchor hidden-xs" href="#tags-OSK" title="tags-OSK"><span class="octicon octicon-link"></span></a><span>tags: </span><code>OSK</code></h6><h2 id="概要" data-id="概要"><a class="anchor hidden-xs" href="#概要" title="概要"><span class="octicon octicon-link"></span></a><span>概要</span></h2><p><span>Python班(2021) / DeepLearning班(2021) 班長が、今年度ゼミの課題で作った成果物。</span><br>
 <span>作ってる時の感想とか反省点とかも書いてある。</span></p><h2 id="成果物" data-id="成果物"><a class="anchor hidden-xs" href="#成果物" title="成果物"><span class="octicon octicon-link"></span></a><span>成果物</span></h2><ul>
 <li>
-<p><span <a href="記事1.html">Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！</a><br>
- </span><br>
+<p><span <a href="記事1.html">Pythonでモザイクアートを生成して芸術的な証明写真を作りたい！</a></span><br>
 <span>プログラミング演習でモザイクアートを作成するプログラムを作った時の記録</span></p>
 </li>
 <li>
