一部文章の削除

--- a/記事1.html
+++ b/記事1.html
@@ -43,7 +43,6 @@
 </li>
 <li><a href="#問題設定" title="問題設定">問題設定</a><ul>
 <li><a href="#萎えたこと" title="萎えたこと">萎えたこと</a></li>
-<li><a href="#フェイクの出現" title="フェイクの出現">フェイクの出現</a></li>
 </ul>
 </li>
 <li><a href="#環境" title="環境">環境</a></li>
@@ -78,10 +77,7 @@
 </code></pre><p><span>みたいな感じでいくつか例が挙げられていて、具体的にこういう実装をしてくれとナビゲーションがある。僕は「指示のあるプログラムなんてぬるま湯だぜ！」と思ったので、</span><strong><span>「10. 自由課題」</span></strong><span> しか見えなかった。</span></p><p><span>それじゃ結局、最初の課題内容は嘘なのですが、とにかく自由課題に取り組むことにする。</span></p><h3 id="どうせなら、映えるもの" data-id="どうせなら、映えるもの"><a class="anchor hidden-xs" href="#どうせなら、映えるもの" title="どうせなら、映えるもの"><span class="octicon octicon-link"></span></a><span>どうせなら、映えるもの</span></h3><p><span>ゼミではプログラムを書いて、それをスライドにまとめて発表をしないといけない。それならきっと</span><strong><span>ビジュアル</span></strong><span>なものがいいだろう。</span></p><p><span>モザイクアートってプログラムで自動で作れそう、というアイデアが前々からあったので、いい機会だと思ってやってみることにした。</span></p><p><span>ちなみに、1~2日でできるっしょ！みたいな感じで高をくくってはじめたら結構苦戦した。</span></p><hr><h2 id="問題設定" data-id="問題設定"><a class="anchor hidden-xs" href="#問題設定" title="問題設定"><span class="octicon octicon-link"></span></a><span>問題設定</span></h2><p><span>問題設定はこんな感じ。</span></p><p><span>「好きな写真を入力として、モザイクアートを出力するプログラムを作成する。」</span></p><p><span>めちゃめちゃざっくりだけど、これが目標。</span></p><h3 id="萎えたこと" data-id="萎えたこと"><a class="anchor hidden-xs" href="#萎えたこと" title="萎えたこと"><span class="octicon octicon-link"></span></a><span>萎えたこと</span></h3><p><span>作成に当たってモザイクアートについて調べてみたら普通にそういうWebアプリケーションあった。</span></p><p><span>作りたい画像と、素材にしたい写真をアップロードしたらモザイクアートを作ってくれる。</span><strong><span>もう、これでいいじゃん…</span></strong><span> と思って若干萎えたけど、それ以外のアイデアもなかったのでこのままやることにした。</span></p><div class="alert alert-success">
 <p><span>ちなみに実装の記事も見つかった。</span><br>
 <span>ゼミで、誰かが書いたプログラムを使うことは禁止(正確には、理解していなかったり説明できないコードを使うのはダメ)されてるので、それは参考程度にとどめた。</span></p>
-</div><h3 id="フェイクの出現" data-id="フェイクの出現"><a class="anchor hidden-xs" href="#フェイクの出現" title="フェイクの出現"><span class="octicon octicon-link"></span></a><span>フェイクの出現</span></h3><p><span>脱線ばかりしてるけど、もう1個。</span><br>
-<span>作るにあたってモザイクアートをいろいろ解説してる記事と巡り合った。それがこちら。</span></p><div class="alert alert-success">
-<p><a href="https://www.photomosaicart-de-memorial.jp/successpoint_no1/" target="_blank" rel="noopener"><span>第1回 本来のフォトモザイクアートとは！？ | JDO-MosaicArt</span></a></p>
-</div><p><span>モザイクアートって「ターゲット画像を、素材を並べて再現するもの」ですよね。でも、中には</span><strong><span>ターゲット画像を透かして浮かび上がらせている画像もある</span></strong><span>らしい。それ、意味ないじゃん。素人でもわかる。</span></p><p><span>モザイクアート界にも外道ってあるんだな～としみじみした。</span></p><hr><h2 id="環境" data-id="環境"><a class="anchor hidden-xs" href="#環境" title="環境"><span class="octicon octicon-link"></span></a><span>環境</span></h2><div class="alert alert-info">
+</div></p><hr><h2 id="環境" data-id="環境"><a class="anchor hidden-xs" href="#環境" title="環境"><span class="octicon octicon-link"></span></a><span>環境</span></h2><div class="alert alert-info">
 <p><span>別に大事じゃないので飛ばしてくれて構わないです</span></p>
 </div><p><span>以下の環境を使った。</span></p><ul>
 <li><span>Windows 10 Home 2004 64bit</span></li>
